# notifiq

./: .env.example  .envrc  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TODO.md  deploy.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  send_test_notification.py
.github/workflows/: ci.yaml
.windsurf/workflows/: version_and_release.md
docs/: MULTI_PUSHOVER_SETUP.md
scripts/: send_test_notification.py
src/: config.py  health.py  logging_config.py  main.py  routing.py
src/notifiers/: apprise_notifier.py  base.py  loki_notifier.py  mattermost_notifier.py  ntfy_direct_notifier.py  priority_mappings.py  pushover_direct_notifier.py
tests/: test_app_smoke.py
